(lang dune 3.15)

(name c0_compiler)

(generate_opam_files true)

(using menhir 3.0)

(source
 (github C0-language/c0-compiler))

(authors "Revazi Gelenidze")

(maintainers "Revazi Gelenidze")

(license LICENSE)

(documentation "https://github.com/C0-language/c0-docs")

(package
 (name c0_compiler)
 (synopsis "A compiler for the C0 language")
 (description
  "C0 is a simple imperative language with a C-like syntax. This is a compiler for C0 that translates C0 programs to MIPS assembly.")
 (depends
  (ocaml
   (>= 5.1))
  (dune
   (>= 3.15.3))
  (menhir
   (>= 20231231))))
